--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.6.0
 certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
 Django==4.1.7
+django-crispy-forms==2.0
 sqlparse==0.4.3
 tzdata==2022.7
 wincertstore==0.2
