--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
+crispy-bootstrap5==0.7
 Django==4.1.7
 django-crispy-forms==2.0
 sqlparse==0.4.3
