--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.6.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
+certifi==2022.12.7
 crispy-bootstrap5==0.7
 Django==4.1.7
 django-crispy-forms==2.0
+pip==22.3.1
+setuptools==65.6.3
 sqlparse==0.4.3
-tzdata==2022.7
-wincertstore==0.2
+wheel==0.38.4
