--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.6.0
 certifi==2022.12.7
 crispy-bootstrap5==0.7
+dj-database-url==1.2.0
 Django==4.1.7
 django-crispy-forms==2.0
+gunicorn==20.1.0
 pip==22.3.1
+psycopg2-binary==2.9.5
 setuptools==65.6.3
 sqlparse==0.4.3
+tzdata==2022.7
 wheel==0.38.4
+wincertstore==0.2
