--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,14 @@ dj-database-url==1.2.0
 Django==4.1.7
 django-crispy-forms==2.0
 gunicorn==20.1.0
+numpy==1.24.2
+pandas==1.5.3
 pip==22.3.1
 psycopg2-binary==2.9.5
+python-dateutil==2.8.2
+pytz==2022.7.1
 setuptools==65.6.3
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
 wheel==0.38.4
