--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,63 @@
 asgiref==3.6.0
+asttokens==2.2.1
+backcall==0.2.0
+backports.functools-lru-cache==1.6.4
 certifi==2022.12.7
+colorama==0.4.6
+contourpy==1.0.7
 crispy-bootstrap5==0.7
+cycler==0.11.0
+debugpy==1.5.1
+decorator==5.1.1
 dj-database-url==1.2.0
 Django==4.1.7
 django-crispy-forms==2.0
+executing==1.2.0
+fonttools==4.39.0
 gunicorn==20.1.0
+importlib-metadata==6.0.0
+importlib-resources==5.12.0
+ipykernel==6.15.0
+ipython==8.11.0
+jedi==0.18.2
 joblib==1.2.0
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+nest-asyncio==1.5.6
 numpy==1.24.2
+packaging==23.0
 pandas==1.5.3
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.4.0
 pip==22.3.1
+platformdirs==3.1.1
+prompt-toolkit==3.0.38
+psutil==5.9.0
 psycopg2-binary==2.9.5
+pure-eval==0.2.2
+Pygments==2.14.0
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.7.1
+pywin32==227
+pyzmq==23.2.0
 scikit-learn==1.2.2
 scipy==1.10.1
+seaborn==0.12.2
 setuptools==65.6.3
 six==1.16.0
 sqlparse==0.4.3
+stack-data==0.6.2
 threadpoolctl==3.1.0
+tornado==6.2
+traitlets==5.9.0
+typing_extensions==4.5.0
 tzdata==2022.7
+wcwidth==0.2.6
 wheel==0.38.4
 wincertstore==0.2
+zipp==3.15.0
