--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ anyio==3.6.2
 appnope==0.1.3
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+arrow==1.2.3
 asgiref==3.6.0
 asttokens==2.2.1
 async-timeout==4.0.2
@@ -24,12 +25,14 @@ decorator==5.1.1
 defusedxml==0.7.1
 dj-database-url==1.2.0
 Django==4.1.7
+django-bootstrap-v5==1.0.11
 django-crispy-forms==2.0
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.3
 flit_core==3.8.0
 fonttools==4.39.0
+fqdn==1.5.1
 frozenlist==1.3.3
 gunicorn==20.1.0
 idna==3.4
@@ -38,9 +41,11 @@ importlib-resources==5.12.0
 ipykernel==6.15.0
 ipython==8.11.0
 ipython-genutils==0.2.0
+isoduration==20.11.0
 jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
+jsonpointer==2.3
 jsonschema==4.17.3
 jupyter_client==8.0.3
 jupyter_core==5.3.0
@@ -111,8 +116,10 @@ tqdm==4.65.0
 traitlets==5.9.0
 typing_extensions==4.5.0
 tzdata==2022.7
+uri-template==1.2.0
 urllib3==1.26.15
 wcwidth==0.2.6
+webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.5.1
 wheel==0.38.4
