--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ dj-database-url==1.2.0
 Django==4.1.7
 django-bootstrap-v5==1.0.11
 django-crispy-forms==2.0
+django-prometheus==2.2.0
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.3
