--- a/requirements.txt
+++ b/requirements.txt
@@ -12,14 +12,17 @@ attrs==22.2.0
 backcall==0.2.0
 backports.functools-lru-cache==1.6.4
 beautifulsoup4==4.11.2
+bertopic==0.15.0
 bleach==6.0.0
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.1.0
+click==8.1.3
 colorama==0.4.6
 contourpy==1.0.7
 crispy-bootstrap5==0.7
 cycler==0.11.0
+Cython==0.29.35
 debugpy==1.6.6
 decorator==5.1.1
 defusedxml==0.7.1
@@ -31,11 +34,15 @@ django-prometheus==2.2.0
 entrypoints==0.4
 executing==1.2.0
 fastjsonschema==2.16.3
+filelock==3.12.0
 flit_core==3.8.0
 fonttools==4.39.0
 fqdn==1.5.1
 frozenlist==1.3.3
+fsspec==2023.5.0
 gunicorn==20.1.0
+hdbscan==0.8.29
+huggingface-hub==0.15.1
 idna==3.4
 importlib-metadata==6.0.0
 importlib-resources==5.12.0
@@ -55,18 +62,23 @@ jupyter_server==2.5.0
 jupyter_server_terminals==0.4.4
 jupyterlab-pygments==0.2.2
 kiwisolver==1.4.4
+llvmlite==0.40.0
 MarkupSafe==2.1.2
 matplotlib==3.7.1
 matplotlib-inline==0.1.6
 mistune==2.0.5
+mpmath==1.3.0
 multidict==6.0.4
 nbclassic==0.5.3
 nbclient==0.7.2
 nbconvert==7.2.9
 nbformat==5.7.3
 nest-asyncio==1.5.6
+networkx==3.1
+nltk==3.8.1
 notebook==6.5.3
 notebook_shim==0.2.2
+numba==0.57.0
 numpy==1.24.2
 openai==0.27.2
 packaging==23.0
@@ -88,6 +100,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.14.0
+pynndescent==0.5.10
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
@@ -95,6 +108,7 @@ python-json-logger==2.0.7
 pytz==2022.7.1
 PyYAML==6.0
 pyzmq==25.0.1
+regex==2023.6.3
 requests==2.28.2
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
@@ -102,21 +116,29 @@ scikit-learn==1.2.2
 scipy==1.10.1
 seaborn==0.12.2
 Send2Trash==1.8.0
+sentence-transformers==2.2.2
+sentencepiece==0.1.99
 setuptools==65.6.3
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
 stack-data==0.6.2
+sympy==1.12
 tenacity==8.2.2
 terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
+tokenizers==0.13.3
+torch==2.0.1
+torchvision==0.15.2
 tornado==6.2
 tqdm==4.65.0
 traitlets==5.9.0
+transformers==4.29.2
 typing_extensions==4.5.0
 tzdata==2022.7
+umap-learn==0.5.3
 uri-template==1.2.0
 urllib3==1.26.15
 wcwidth==0.2.6
